--- a/momentum.html
+++ b/momentum.html
@@ -5,22 +5,25 @@
     <title>My momentum</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="momentum.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="js-clock">
-        <h1>00:00</h1>
+    <div>
+        <div class="js-clock">
+            <h1>00:00</h1>
+        </div>
+        <form class="js-form form">
+            <input type="text" placeholder="what is your name?" />
+        </form>
+        <h4 class="js-greetings greetings"></h4>
+        <form class="js-toDoForm">
+            <input type="text" placeholder="Write a to do">
+        </form>
+        <ul class="js-toDoList">
+        </ul>
+        <span class="js-weather"></span>
     </div>
-    <form class="js-form form">
-        <input type="text" placeholder="what is your name?" />
-    </form>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-        <input type="text" placeholder="Write a to do">
-    </form>
-    <ul class="js-toDoList">
-    </ul>
-    <span class="js-weather"></span>
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
