--- a/momentum.html
+++ b/momentum.html
@@ -4,8 +4,8 @@
 <head>
     <title>My momentum</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="momentum.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/momentum.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,19 +16,20 @@
         <form class="js-form form">
             <input type="text" placeholder="what is your name?" />
         </form>
-        <h4 class="js-greetings greetings"></h4>
-        <form class="js-toDoForm">
-            <input type="text" placeholder="Write a to do">
+        <p class="js-greetings greetings"></p>
+        <p class="question">What is your main focus for today?</p>
+        <form class="js-toDoForm toDoForm">
+            <input type="text">
         </form>
         <ul class="js-toDoList">
         </ul>
         <span class="js-weather"></span>
     </div>
-    <script src="clock.js"></script>
-    <script src="gretting.js"></script>
-    <script src="todo.js"></script>
-    <script src="bg.js"></script>
-    <script src="weather.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/gretting.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/bg.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 
 </html>
